--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -7,6 +7,8 @@ footer {
     align-items: center;
     justify-content: center;
     bottom: 0;
+    box-sizing: border-box;
+    position: fixed;
 }
 
 footer p {
